--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -185,9 +185,9 @@
 <!--				</nav>-->
 
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-					<h2><button class="btn-sm btn-success">员工添加</button></h2>
+					<h2><a class="btn-sm btn-success" href="emp" th:href="@{/emp}">员工添加</a></h2>
 					<div class="table-responsive">
-						<table a class="table table-striped table-sm" href="emp" th:href="/emp">
+						<table a class="table table-striped table-sm" href="emp" th:href="@{/emp}">
 							<thead>
 								<tr>
 
@@ -208,7 +208,7 @@
 									<td th:text="${emp.department.departmentName}"></td>
 									<td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm')}"></td>
 									<td>
-										<button class="btn btn-sm btn-primary">编辑</button>
+										<a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}">编辑</a>
 										<button class="btn btn-sm btn-danger">删除</button>
 
 									</td>
